<resources>
    <string name="app_name">Mapsnap</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ossi_miilukangas">• Osgi Millikan\'s</string>
    <string name="matias_jarde">• Matias Jade</string>
    <string name="lasse_kangas">• Lapse Kansas</string>
    <string name="juho_mulari">• Judo Malaria</string>
    <string name="samuli_holtta">• Samurai Halette</string>
</resources>